--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <p>"Front-end developer and Artist"</p>
   </div>
   <div class="btns">
-    <button><a href="https://www.instagram.com/saaven.art?igsh=cjN2b2x6M2pvbTJ5&utm_source=qr">Instagram</a></button>
-    <button><a href="https://www.linkedin.com/in/latifa-wakili-68423b277">Linkedin</a></button>
- 
-    <button><a href="https://x.com/@WakiliLatifa">X</a></button>
-    <button><a href="https://www.facebook.com/saaven.art?mibextid=LQQJ4d">Facebook</a></button>
-    <button><a href="https://wa.me/qr/JOAKEG2E6UZPB1">WhatsApp</a></button>
-    <button><a href="https://t.me/saaven_art">Telegram</a></button>
+    <a href="https://www.instagram.com/saaven.art?igsh=cjN2b2x6M2pvbTJ5&utm_source=qr"><button>Instagram</button></a>
+    <a href="https://www.linkedin.com/in/latifa-wakili-68423b277"><button>Linkedin</button></a>
+    <a href="https://x.com/@WakiliLatifa"><button>X</button></a>
+    <a href="https://www.facebook.com/saaven.art?mibextid=LQQJ4d"><BUtton>Facebook</BUtton></a>
+    <a href="https://wa.me/qr/JOAKEG2E6UZPB1"><BUtton>WhatsApp</BUtton></a>
+    <a href="https://t.me/saaven_art"><BUtton>Telegram</BUtton></a>
   </div>
 </div>
 </body>
